--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -239,7 +239,7 @@ Leaves in these normally-shaded locations experience rapid light and temperature
 
 Elevation of $T_{leaf}$ above $T_{air}$ is not uniform across time and space, but varies with micrometeorological conditions. During drought (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, $T_{leaf} - T_{air}$ will tend to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have stronger $g_s$ limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
-In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017;  @songTreeSurfaceTemperature2020]. 
+In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017;  @songTreeSurfaceTemperature2020]. 
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
 Limitations in heat dissipation in shade leaves, together with physiological propensities, may cause above-optimal $T_{leaf}$ under slight heat or drought stress or during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
 In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory and inner canopy (Fig. `r fig_NEON_vertical`) also inhibits evaporative cooling by reducinf VPD, thus increasing $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
