integrating a few suggestions from  ..._KAT shortening suggestions.docx
#113

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -126,6 +126,7 @@ As the climate changes, integrating the patterns and mechanisms reviewed here in
 
 # I. Introduction
 
+<!--This first paragraph is all good content, but mostly pretty basic background knowledge that could be cut if needed.-->
 Forest responses and feedbacks to climate change will critically influence Earth's furture climate.
 Global average temperatures have risen 1.2$^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach +1.5$^\circ$C by 2040 [@ipccClimateChange20212021], accompanied by increasing severity and frequency of heat waves and hotter droughts [@meehlMoreIntenseMore2004; @ipccClimateChange20212021].
 These changes are expected to affect tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021] by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; <!--@corlettImpactsWarmingTropical2011-->; @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. 
@@ -176,7 +177,8 @@ This light gradient drives variation in leaf traits (Table 1), photosynthetic ca
 
 Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature might also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. 
 Vertical transport in forest canopies is dominated by turbulent transport. 
-Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) [@penmanWeatherWheatEssay1960]-- such that wind speed declines logarithmically with proximity to the canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
+Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) [@penmanWeatherWheatEssay1960]-- such that wind speed declines logarithmically with proximity to the canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. 
+Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
 Within canopies, however, transport often fails to mimic diffusion – e.g., transport of momentum [@shawSecondaryWindSpeed1977] or heat [e.g., @raupachLagrangianAnalysisScalar1987] may occur in the direction opposite to that predicted by gradients of wind speed or temperature, respectively – making vertical wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
 Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. 
 These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
@@ -522,16 +524,13 @@ The complex interwoven relations between the biophysical environment and biologi
 ### Warming
 
 As climate change progresses, we anticipate increases in both mean daytime and nighttime $T_{air}$, as well as increased maximum temperatures, with extreme increases during heat waves [@ipccClimateChange20212021].
-These changes will impact leaf and ecosystem gas exchange with the atmosphere, and, over longer time frames, forest structure, composition, and leaf trait distributions. 
-Our in-depth review sheds some light on how responses are likely to vary across forest vertical gradients, yet important uncertainties remain.
-
 To the extent that warming is coupled to drought, we expect that the tallest trees to usually be hardest-hit, particularly in severe drought, partly because their crowns are positioned in a more challenging microenvironment [section 5.1, Figs. `r fig_schematic`- `r fig_treerings`, e.g., @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019; @anderson-teixeiraJointEffectsClimate2022].
-Specifically, warming will disproportionately stress tall canopy trees when $T_{air}$ and VPD rise enough that sun-exposed leaves cannot maintain both hydraulic safety and the transpirational cooling required to keep $T_{leaf}$ below damaging thresholds.
 In contrast, understory trees will be more sheltered during droughts and heat waves, and in some settings may benefit from increased light availability [@bennettLargerTreesSuffer2015;@hoganDroughtInterannualVariability2019; @nunesForestFragmentationImpacts2022].
 An interesting open question is to what extent these patterns vary with the nature of the drought, including the relative contributions to stress from low soil moisture versus high VPD. 
 While the two are coupled over longer time scales [@humphreySoilMoistureAtmosphere2021; @novickIncreasingImportanceAtmospheric2016], the latter can be intense for short periods even when soil moisture is high (e.g., during a heat wave) and exerts a stronger influence on ET in many biomes [@novickIncreasingImportanceAtmospheric2016]. 
 Given the mechanisms reviewed here, we might expect that VPD in particular skews the stress more towards the exposed canopy trees.   
 
+<!--the following two paragraphs could be shortened/ condensed into one-->
 It remains poorly understood how responses to warming will vary across vertical gradients under mesic conditions. 
 Leaf-level responses are relatively well-understood: at the metabolic level, photosynthesis and respiration are coupled to photosynthetic thermal optima, which reflect adaptation to local climate but do not vary consistently with height (see section 4.2, Table 2). 
 Beyond the optimal temperature, photosynthesis declines whereas respiration continues to increase, shifting the carbon balance from source to sink, independent of water and irradiance [@duffyHowCloseAre2021]. 
@@ -546,6 +545,7 @@ However, with $T_{air}$ more frequently equaling or exceeding photosynthetic opt
 While it is currently difficult to predict whether canopy or understory photosynthesis will be more severely affected by warming (see section 4.2), limited tree-ring evidence indicates that unusually hot growing seasons can reduce growth more for understory trees [section 5.1, Fig `r fig_treerings`b, @rollinsonClimateSensitivityUnderstory2020].
 Thus, while canopy trees are probably more vulnerable to mortality from distinct heat-related disturbances, such as drought or heat waves, trees in the understory might be more negatively affected by chronic stress from warming $T_{air}$, which may reduce growth and increase the risk of carbon starvation in these small trees, which have lower NSC reserves [@niinemetsResponsesForestTrees2010].
 
+<!--consider deleting this whole paragraph-->
 Thus, in synthesis, warming will affect trees across the vertical gradient, but the stress will be of a different nature at different heights.
 We expect that the tallest trees will be increasingly prone to hydraulic failure and damaging or lethal $T_{leaf}$, while greater uncertainty remains surrounding the resoponses of understory trees.
 Both groups -- but probably disproportionately the upper-canopy trees -- are likely to experience increasing mortality, with patterns mirroring the current tendency for canopy trees to be more prone to climate-related disturbances including drought while understory trees are more prone to competition and carbon starvation [@goraImplicationsSizedependentTree2021].
@@ -608,7 +608,7 @@ In addition, capturing vertical gradients in ET, GPP, respiration, and woody gro
 Remote sensing data provide a valuable means to scale between *in situ* observations and DGVMs.
 Specifically, the increasing availability of airborne and spaceborne lidar and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients and vegetation structure across scales (Fig. `r fig_model`). 
 Airborne, spaceborne and terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. 
-These data can be combined with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based Forward Looking Infrared (FLIR) cameras. 
+These data can be combined with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based infrared cameras. 
 
 
 ![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
@@ -616,8 +616,8 @@ These data can be combined with thermal remote sensing data from the spaceborne 
 Detailed structural information from lidar data can be used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
 Canopy shading can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
 Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although few applications exist at finer-scales needed to understand vertical variation in canopy temperatures [@johnstonWhatLiesVerticalinpress]. 
-As an example of the type of insight possible with this approach, @pauTropicalForestTemperature2018 used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest GPP was more strongly associated with canopy temperature than $T_{air}$ or VPD.
-In a a western-U.S. savanna system in the western U.S., @johnstonWhatLiesVerticalinpress found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies, together with very high grass temperatures and consistent with the principles outlined in sections 1-2 (Fig. `r SIfig_NEON_all`).
+As an example of the type of insight possible with this approach, @pauTropicalForestTemperature2018 used data from a tower-based infrared camera in combination with eddy-covariance data and found that tropical forest GPP was more strongly associated with canopy temperature than $T_{air}$ or VPD.
+In a a western-U.S. savanna system in the western U.S., @johnstonWhatLiesVerticalinpress found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the tops of tree crowns, together with very high grass temperatures and consistent with the principles outlined in sections 1-2 (Fig. `r SIfig_NEON_all`).
 The growing availability of such data makes this an opportune time to link *in situ* measurements with fine- and landscape-scale measurements to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
 
 
